bin_PROGRAMS=specform tapcat tapget tapsplit unspecform tapls tap2dsk mkp3fs \
	     bin2bas sna2tap dsk2tap sna2dsk
EXTRA_DIST=README COPYING INSTALL ChangeLog dualdos.reg dskwrite.zsm \
	snapld.zsm romsna.zsm

specform_SOURCES=specform.c
unspecform_SOURCES=unspecfm.c cnvshell.c cnvshell.h
sna2tap_SOURCES=sna2tap.c cnvshell.c cnvshell.h
tapcat_SOURCES=tapcat.c taputil.c taputil.h
tapget_SOURCES=tapget.c taputil.c taputil.h
tapsplit_SOURCES=tapsplit.c taputil.c taputil.h
tapls_SOURCES=tapls.c taputil.c taputil.h
tap2dsk_SOURCES=tap2dsk.c dskbits.c dskbits.h plus3fs.c plus3fs.h \
		taputil.c taputil.h
mkp3fs_SOURCES=mkp3fs.c dskbits.c dskbits.h plus3fs.c plus3fs.h
dsk2tap_SOURCES=dsk2tap.c dskbits.c dskbits.h dskwrite.inc
bin2bas_SOURCES=bin2bas.c cnvshell.c cnvshell.h
sna2dsk_SOURCES=sna2dsk.c dskbits.c dskbits.h plus3fs.c plus3fs.h

